--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Kuppens Portfolio</title>
+    <link rel="stylesheet" href="reset.css" media="screen"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
      <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
@@ -11,6 +12,7 @@
      <!-- JavaScript: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/style.css">
+    <script type="text/JavaScript" src=".js/darkmode.js" defer></script>
 </head>
 
 <body class=" border-0">
@@ -30,13 +32,29 @@
         <li class="nav-item">
           <a class="nav-link active" href="index.html" aria-current="page">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projecten.html">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="projecten.html" role="button" data-bs-toggle="dropdown" aria-expanded="true">
             Projecten
           </a>
+          <ul class="dropdown-menu grey">
+            <li><a class="dropdown-item" href="projecten.html">Overzicht projecten</a></li>
+            <li><a class="dropdown-item" href="project1.html">Project: Homelab</a></li>
+            <li><a class="dropdown-item" href="project2.html">Project: Webdesign</a></li>
+            <li><a class="dropdown-item" href="project3.html">Project: Python</a></li>
+            <li><a class="dropdown-item" href="project4.html">Project: CCNA</a></li>
+            <li><a class="dropdown-item" href="project5.html">Project: Rubies</a></li>
+            <li><a class="dropdown-item" href="project6.html">Project: NAS</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li>
+          <button id="theme-switch" class="theme-switch-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#e3e3e3" viewBox="0 -960 960 960"><path d="M480-120q-150 0-255-105T120-480t105-255 255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120"/></svg>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#e3e3e3" viewBox="0 -960 960 960"><path d="M480-280q-83 0-141.5-58.5T280-480t58.5-141.5T480-680t141.5 58.5T680-480t-58.5 141.5T480-280M200-440H40v-80h160zm720 0H760v-80h160zM440-760v-160h80v160zm0 720v-160h80v160zM256-650l-101-97 57-59 96 100zm492 496-97-101 53-55 101 97zm-98-550 97-101 59 57-100 96zM154-212l101-97 55 53-97 101z"/></svg>
+          </button>
         </li>
       </ul>
       
@@ -100,38 +118,41 @@
             </div>
           </section>
 
-          <section class="container-fluid px-3 mt-4"> <!-- changed -->
+          <section class="container-fluid px-3 mt-4"> 
             <div class="row">
-              <div class="col-12 col-lg-4">
+              <div class="col-12">
                 <h2 class="title-color text-center">Enkele projecten</h2>
-                <p class="text-center">Hieronder kan je al een paar van mijn projecten bekijken.</p>
+                  <p class="text-center">Hieronder kan je al een paar van mijn projecten bekijken.</p>
               </div>
-                <div class="row">
-                  <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
-                    <img src="Assets/images/Homelab.png" alt="Homelab project image" class="img-fluid">
+            </div>
+            <div class="row">
+              <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
+                <a href="project1.html" class="d-block">
+                  <img src="Assets/images/Homelab.png" alt="Homelab project image" class="img-fluid">
                     <div class="overlay">
-                      <div class="text">Homelab Project</div>
-                      <p>Tijdens mijn vrije tijd heb ik een persoonlijk homelab opgezet om mijn vaardigheden in systeem- en netwerkbeheer te verbeteren.
-                      </p>
+                      <div class="text">Project: Homelab</div>
+                      <p>Tijdens mijn vrije tijd heb ik een persoonlijk homelab opgezet om mijn vaardigheden in systeem- en netwerkbeheer te verbeteren.</p>
                     </div>
-                  </article>
-                  <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
-                    <img src="Assets/images/HTML.png" alt="HTML project image" class="img-fluid">
-                    <div class="overlay">
-                      <div class="text">Webdesign Project</div>
-                      <p>Voor een schoolproject heb ik een portfolio website ontworpen en ontwikkeld met HTML, CSS en Bootstrap om mijn vaardigheden in webdesign te oefenen.
-                      </p>
-                    </div>
-                  </article>
-                  <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
-                    <img src="Assets/images/python_code.jpg" alt="Python project image" class="img-fluid">
-                    <div class="overlay">
-                      <div class="text">Python Project</div>
-                      <p>Tijdens mijn opleiding ben ik bezig met python.
-                      </p>
-                    </div>
-                  </article>
-              </div>
+                </a>
+              </article>
+              <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
+                <a href="project2.html" class="d-block">
+                <img src="Assets/images/HTML.png" alt="HTML project image" class="img-fluid">
+                  <div class="overlay">
+                    <div class="text">Project: Webdesign</div>
+                    <p>Voor een schoolproject heb ik een portfolio website ontworpen en ontwikkeld met HTML, CSS en Bootstrap om mijn vaardigheden in webdesign te oefenen.</p>
+                  </div>
+                </a>
+              </article>
+              <article class="project-card p-0 m-0 mx-auto col-12 col-md-4">
+                <a href="project3.html" class="d-block">
+                <img src="Assets/images/python_code.jpg" alt="Python project image" class="img-fluid">
+                  <div class="overlay">
+                    <div class="text">Project: Python</div>
+                    <p>Tijdens mijn opleiding ben ik bezig met python.</p>
+                  </div>
+                </a>
+              </article>
             </div>
           </section>
         </main>
